--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -44,8 +44,8 @@
 			<li class="flex flex-col items-start justify-start gap-6">
 				<h3 class="uppercase">Resources</h3>
 				<ul class="flex flex-col items-start justify-start gap-5">
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Community</a></li>
+					<li><a href="#">About</a></li>
+					<li><a routerLink="/release-notes">Release Notes</a></li>
 				</ul>
 			</li>
 			<li class="flex flex-col items-start justify-start gap-6">
