--- a/src/app/components/release-template/release-template.component.html
+++ b/src/app/components/release-template/release-template.component.html
@@ -20,18 +20,38 @@
 				>the issues page</a
 			>.
 		</p>
-		<h5 class="relative justify-center text-base font-medium leading-snug">
-			{{ release.extra }}
-		</h5>
+		@if (release.extra) {
+			<h5
+				class="relative justify-center text-base font-medium leading-snug"
+			>
+				{{ release.extra }}
+			</h5>
+		}
 	</div>
 
-	<app-release-template-item
-		[fixes]="release.fixes"
-	></app-release-template-item>
+	@if (release.fixes && release.fixes.length > 0) {
+		<app-release-template-item
+			title="Fixes"
+			icon="bug_report"
+			[content]="release.fixes"
+		></app-release-template-item>
+	}
 
-	<app-release-template-item
-		[features]="release.features"
-	></app-release-template-item>
+	@if (release.features && release.features.length > 0) {
+		<app-release-template-item
+			title="Features"
+			icon="local_fire_department"
+			[content]="release.features"
+		></app-release-template-item>
+	}
+
+	@if (release.refactors && release.refactors.length > 0) {
+		<app-release-template-item
+			title="Refactors"
+			icon="code"
+			[content]="release.refactors"
+		></app-release-template-item>
+	}
 
 	@if (!isLast) {
 		<div class="flex w-full h-[1px] bg-surface-container-high mt-6"></div>
