--- a/src/app/routes/privacy-policy/privacy-policy.component.html
+++ b/src/app/routes/privacy-policy/privacy-policy.component.html
@@ -8,10 +8,9 @@
 		<h1 class="font-medium text-5xl md:text-6xl">Privacy Policy</h1>
 		<p>
 			Hello, community!<br />
-			This app was lovingly developed by a community member, created for
-			all of us to share fun and authentic content. <br />
-			Here, we explain in simple terms how we handle the data and links
-			you share.
+			This app was lovingly developed for all the community to share fun
+			and authentic content. <br />
+			Here, we explain in simple terms how we handle the data you share.
 		</p>
 	</header>
 
