--- a/src/app/routes/terms-of-service/terms-of-service.component.html
+++ b/src/app/routes/terms-of-service/terms-of-service.component.html
@@ -7,11 +7,11 @@
 	>
 		<h1 class="font-medium text-5xl md:text-6xl">Terms of Service</h1>
 		<p>
-			Welcome! <br />
-			This app was created with an open heart so that we can all share and
-			enjoy amazing content. By using the app, you agree to the following
-			terms, which are designed to protect our community and ensure a safe
-			and enjoyable experience for everyone.
+			Oh, hello! <br />
+			<strong>bscm</strong> was created with an open heart so that we can
+			all share and enjoy amazing content. By using the app, you agree to
+			the following terms, which are designed to protect our community and
+			ensure a safe and enjoyable experience for everyone.
 		</p>
 	</header>
 
