--- a/src/app/routes/chart/sections/danger-zone/subcomponents/list-item.component.html
+++ b/src/app/routes/chart/sections/danger-zone/subcomponents/list-item.component.html
@@ -3,7 +3,7 @@
 >
 	<div class="flex flex-col items-start justify-start gap-1">
 		<h6 class="font-medium">{{ title }}</h6>
-		<p>{{ description }}</p>
+		<p [innerHTML]="safeDescription"></p>
 	</div>
 	<button
 		mat-raised-button
