🔧 refactor: migrated to new InputSignal API

--- a/src/app/components/chart-preview/chart-preview.component.html
+++ b/src/app/components/chart-preview/chart-preview.component.html
@@ -1,6 +1,6 @@
 <a
 	class="flex flex-row items-start justify-start gap-4 bg-surface-container hover:bg-surface-container-low transition-colors duration-75 border border-outline-variant rounded-2xl p-6 cursor-pointer"
-	[routerLink]="routerLink"
+	[routerLink]="routerLink()"
 	title="{{ this.chart.track }} - {{ this.chart.artist }}"
 >
 	<div
