--- a/src/app/routes/chart/sections/versions/versions.component.html
+++ b/src/app/routes/chart/sections/versions/versions.component.html
@@ -3,7 +3,7 @@
 		#versionTable
 		class="w-full"
 		[columns]="versionsColumns"
-		[data]="versions"
+		[data]="versions()"
 		[actions]="versionsActions"
 		hasSorting="true"
 		initialSortColumn="index"
