--- a/src/app/components/avatar/avatar.component.html
+++ b/src/app/components/avatar/avatar.component.html
@@ -1,17 +1,17 @@
-@if (src) {
+@if (src()) {
 	<img
 		class="rounded-full aspect-square object-cover"
-		[ngStyle]="{ width: size + 'px', height: size + 'px' }"
-		[src]="src"
-		[alt]="alt"
+		[ngStyle]="{ width: size() + 'px', height: size() + 'px' }"
+		[src]="src()"
+		[alt]="alt()"
 	/>
 } @else {
 	<div
 		class="rounded-full flex items-center justify-center bg-primary-container"
-		[ngStyle]="{ width: size + 'px', height: size + 'px' }"
+		[ngStyle]="{ width: size() + 'px', height: size() + 'px' }"
 	>
 		<span>
-			{{ alt?.charAt(0) }}
+			{{ alt()?.charAt(0) }}
 		</span>
 	</div>
 }
