--- a/src/app/routes/chart/sections/danger-zone/subcomponents/list-item.component.html
+++ b/src/app/routes/chart/sections/danger-zone/subcomponents/list-item.component.html
@@ -2,15 +2,15 @@
 	class="flex flex-col md:flex-row items-center justify-between gap-4 font-normal px-4 py-3 text-sm w-full"
 >
 	<div class="flex flex-col items-start justify-start gap-1">
-		<h6 class="font-medium">{{ title }}</h6>
+		<h6 class="font-medium">{{ title() }}</h6>
 		<p [innerHTML]="safeDescription"></p>
 	</div>
 	<button
 		mat-raised-button
 		class="w-full md:w-fit !bg-red-100/5"
 		type="button"
-		(click)="buttonAction()"
+		(click)="buttonAction()()"
 	>
-		{{ buttonLabel }}
+		{{ buttonLabel() }}
 	</button>
 </li>
