--- a/src/app/routes/chart/subcomponents/table/table.component.html
+++ b/src/app/routes/chart/subcomponents/table/table.component.html
@@ -4,12 +4,12 @@
 		[dataSource]="dataSource"
 		matSort
 		(matSortChange)="sortData($event)"
-		[matSortDisabled]="!hasSorting.length"
-		[matSortActive]="initialSortColumn"
-		[matSortDirection]="sortDirection"
+		[matSortDisabled]="!hasSorting().length"
+		[matSortActive]="initialSortColumn()"
+		[matSortDirection]="sortDirection()"
 		class="mat-elevation-z8"
 	>
-		@for (column of columns; track $index) {
+		@for (column of columns(); track $index) {
 			<ng-container [matColumnDef]="column.columnDef">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header>
 					{{ column.header }}
@@ -22,14 +22,14 @@
 			</ng-container>
 		}
 
-		@if (actions && actions.length > 0) {
+		@if (actions() && actions()!.length > 0) {
 			<ng-container matColumnDef="actions">
 				<th mat-header-cell *matHeaderCellDef>Actions</th>
 				<td mat-cell *matCellDef="let element; let i = index">
 					<div
 						class="flex flex-row items-center justify-center gap-2"
 					>
-						@for (action of actions; track $index) {
+						@for (action of actions(); track $index) {
 							<button
 								[matRippleDisabled]="
 									action.disabled(i, element)
