--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -29,7 +29,7 @@
 		/>
 	}
 	<span class="absolute top-1/2 -translate-y-1/2 right-1.5">
-		@if (this.input && this.input.nativeElement.value.length > 0) {
+		@if (this.input() && this.input().nativeElement.value.length > 0) {
 			<button
 				mat-icon-button
 				(click)="clearSearch()"
