🔧 refactor: migrated to self-closing tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 @if (showHeader) {
-	<app-header></app-header>
+	<app-header />
 }
 <router-outlet />
 @if (showFooter) {
-	<app-footer></app-footer>
+	<app-footer />
 }
