--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -67,7 +67,6 @@
 		</div>
 	</main>
 } @else {
-	<app-error
-		class="flex items-center justify-center w-full min-h-[calc(100vh-7rem)] px-wrapper pt-9 pb-14"
-	></app-error>
+	<app-error class="flex items-center justify-center w-full min-h-[calc(100vh-7rem)] px-wrapper pt-9 pb-14"
+	 />
 }
