--- a/src/app/routes/chart/sections/contributors/contributors.component.html
+++ b/src/app/routes/chart/sections/contributors/contributors.component.html
@@ -1,11 +1,10 @@
 <app-chart-section class="w-full" title="Contributors">
-	<app-table
-		#contributorTable
+	<app-table #contributorTable
 		class="w-full"
 		[columns]="contributorsColumns"
 		[data]="contributors() ?? []"
 		[actions]="contributorsActions"
-	></app-table>
+	 />
 	<span class="flex items-center justify-end w-full">
 		<button
 			mat-stroked-button
