--- a/src/app/routes/chart/sections/versions/versions.component.html
+++ b/src/app/routes/chart/sections/versions/versions.component.html
@@ -1,6 +1,5 @@
 <app-chart-section class="w-full" title="Versions">
-	<app-table
-		#versionTable
+	<app-table #versionTable
 		class="w-full"
 		[columns]="versionsColumns"
 		[data]="versions()"
@@ -8,7 +7,7 @@
 		hasSorting="true"
 		initialSortColumn="index"
 		sortDirection="desc"
-	></app-table>
+	 />
 	<span class="flex items-center justify-end w-full">
 		<button mat-stroked-button (click)="openAddVersionDialog()">
 			<mat-icon>publish</mat-icon>
