🌟 feat: added style commits to release notes render

--- a/src/app/components/release-template/release-template.component.html
+++ b/src/app/components/release-template/release-template.component.html
@@ -53,6 +53,14 @@
 		></app-release-template-item>
 	}
 
+	@if (release().style && release().style!.length > 0) {
+		<app-release-template-item
+			title="Style"
+			icon="palette"
+			[content]="release().style"
+		></app-release-template-item>
+	}
+
 	@if (!isLast()) {
 		<div class="flex w-full h-[1px] bg-surface-container-high mt-6"></div>
 	}
