🐞 fix: delete chart flow, streaming links fetch logic and other little things

--- a/src/app/routes/chart/dialogs/delete-chart/delete-chart.component.html
+++ b/src/app/routes/chart/dialogs/delete-chart/delete-chart.component.html
@@ -3,12 +3,12 @@
 	<mat-dialog-content class="!flex flex-col items-start gap-4">
 		<p>
 			Are you sure you want to delete the chart
-			<strong>{{ data.chartName }}</strong
+			<strong>{{ this.data.name }}</strong
 			>? <br />
 			This action cannot be undone.
 		</p>
 		<p>
-			Please type <strong>{{ data.chartName }}</strong> to confirm.
+			Please type <strong>{{ this.data.name }}</strong> to confirm.
 		</p>
 		<mat-form-field
 			appearance="outline"
