--- a/src/app/routes/chart/sections/versions/versions.component.html
+++ b/src/app/routes/chart/sections/versions/versions.component.html
@@ -1,5 +1,6 @@
 <app-chart-section class="w-full" title="Versions">
-	<app-table #versionTable
+	<app-table
+		#versionTable
 		class="w-full"
 		[columns]="versionsColumns"
 		[data]="versions()"
@@ -7,8 +8,15 @@
 		hasSorting="true"
 		initialSortColumn="index"
 		sortDirection="desc"
-	 />
-	<span class="flex items-center justify-end w-full">
+	/>
+	<span class="flex items-center justify-end w-full gap-4">
+		<button
+			mat-stroked-button
+			class="!m-0 !p-0"
+			(click)="openAddVersionDialog()"
+		>
+			<mat-icon class="!m-0">edit</mat-icon>
+		</button>
 		<button mat-stroked-button (click)="openAddVersionDialog()">
 			<mat-icon>publish</mat-icon>
 			Publish new version
