--- a/src/app/routes/chart/subcomponents/table/table.component.html
+++ b/src/app/routes/chart/subcomponents/table/table.component.html
@@ -40,6 +40,7 @@
 								"
 								mat-ripple
 								matTooltip="{{ action.description }}"
+								title=""
 								matTooltipPosition="above"
 								matTooltipShowDelay="375"
 								matTooltipClass="!text-sm"
