--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -1,7 +1,7 @@
 <main
 	class="flex flex-col-reverse md:flex-row items-start justify-center w-full min-h-[calc(100vh-7rem)] px-wrapper pt-9 pb-14 gap-9 md:gap-16"
 >
-	@if (charts) {
+	@if (charts && !error) {
 		@if (charts.length > 0 || filters.length > 0) {
 			<app-filter-panel
 				class="w-full md:w-1/3 md:max-w-md"
